add_subdirectory(kde3)

ecm_install_icons(ICONS
    16-actions-kr_addbookmark.png
    16-actions-kr_arc_pack.png
    16-actions-kr_arc_test.png
    16-actions-kr_arc_unpack.png
    16-actions-kr_bookman.png
    16-actions-kr_bookmark.png
    16-actions-kr_calc.png
    16-actions-kr_combine.png
    16-actions-kr_compare.png
    16-actions-kr_comparedirs.png
    16-actions-kr_diskusage.png
    16-actions-kr_ftp_connect.png
    16-actions-kr_ftp_disconnect.png
    16-actions-kr_ftp_new.png
    16-actions-kr_fullview.png
    16-actions-kr_hwinfo.png
    16-actions-kr_invert.png
    16-actions-kr_jumpback.png
    16-actions-kr_mountman.png
    16-actions-kr_profile.png
    16-actions-kr_properties.png
    16-actions-kr_select.png
    16-actions-kr_selectall.png
    16-actions-kr_setjumpback.png
    16-actions-kr_split.png
    16-actions-kr_syncbrowse_off.png
    16-actions-kr_syncbrowse_on.png
    16-actions-kr_syncdirs.png
    16-actions-kr_terminal.png
    16-actions-kr_treeview.png
    16-actions-kr_unselect.png
    16-actions-kr_unselectall.png
    22-actions-kr_addbookmark.png
    22-actions-kr_arc_pack.png
    22-actions-kr_arc_test.png
    22-actions-kr_arc_unpack.png
    22-actions-kr_bookman.png
    22-actions-kr_bookmark.png
    22-actions-kr_calc.png
    22-actions-kr_combine.png
    22-actions-kr_compare.png
    22-actions-kr_comparedirs.png
    22-actions-kr_diskusage.png
    22-actions-kr_ftp_connect.png
    22-actions-kr_ftp_disconnect.png
    22-actions-kr_ftp_new.png
    22-actions-kr_fullview.png
    22-actions-kr_hwinfo.png
    22-actions-kr_invert.png
    22-actions-kr_mountman.png
    22-actions-kr_profile.png
    22-actions-kr_properties.png
    22-actions-kr_select.png
    22-actions-kr_selectall.png
    22-actions-kr_split.png
    22-actions-kr_syncdirs.png
    22-actions-kr_terminal.png
    22-actions-kr_treeview.png
    22-actions-kr_unselect.png
    22-actions-kr_unselectall.png
    32-actions-kr_addbookmark.png
    32-actions-kr_arc_pack.png
    32-actions-kr_arc_test.png
    32-actions-kr_arc_unpack.png
    32-actions-kr_bookman.png
    32-actions-kr_bookmark.png
    32-actions-kr_calc.png
    32-actions-kr_combine.png
    32-actions-kr_compare.png
    32-actions-kr_comparedirs.png
    32-actions-kr_dependencies.png
    32-actions-kr_diskusage.png
    32-actions-kr_ftp_connect.png
    32-actions-kr_ftp_disconnect.png
    32-actions-kr_ftp_new.png
    32-actions-kr_fullview.png
    32-actions-kr_hwinfo.png
    32-actions-kr_invert.png
    32-actions-kr_mountman.png
    32-actions-kr_profile.png
    32-actions-kr_properties.png
    32-actions-kr_select.png
    32-actions-kr_selectall.png
    32-actions-kr_split.png
    32-actions-kr_syncdirs.png
    32-actions-kr_terminal.png
    32-actions-kr_treeview.png
    32-actions-kr_unselect.png
    32-actions-kr_unselectall.png
    32-actions-kr_useractions.png
    DESTINATION ${DATA_INSTALL_DIR}/krusader/icons
    THEME hicolor
)

