add_subdirectory(kde3)

ecm_install_icons(ICONS
    16-actions-kr_combine.png
    16-actions-kr_comparedirs.png
    16-actions-kr_diskusage.png
    16-actions-kr_invert.png
    16-actions-kr_jumpback.png
    16-actions-kr_mountman.png
    16-actions-kr_profile.png
    16-actions-kr_select.png
    16-actions-kr_selectall.png
    16-actions-kr_setjumpback.png
    16-actions-kr_split.png
    16-actions-kr_syncbrowse_off.png
    16-actions-kr_syncbrowse_on.png
    16-actions-kr_unselect.png
    16-actions-kr_unselectall.png
    22-actions-kr_combine.png
    22-actions-kr_comparedirs.png
    22-actions-kr_diskusage.png
    22-actions-kr_invert.png
    22-actions-kr_mountman.png
    22-actions-kr_profile.png
    22-actions-kr_select.png
    22-actions-kr_selectall.png
    22-actions-kr_split.png
    22-actions-kr_unselect.png
    22-actions-kr_unselectall.png
    32-actions-kr_combine.png
    32-actions-kr_comparedirs.png
    32-actions-kr_dependencies.png
    32-actions-kr_diskusage.png
    32-actions-kr_invert.png
    32-actions-kr_mountman.png
    32-actions-kr_profile.png
    32-actions-kr_select.png
    32-actions-kr_selectall.png
    32-actions-kr_split.png
    32-actions-kr_unselect.png
    32-actions-kr_unselectall.png
    DESTINATION ${ICON_INSTALL_DIR}
    THEME hicolor
)

